updated spelling for ml-flask-frontend

--- a/frontend/values.yaml
+++ b/frontend/values.yaml
@@ -1,8 +1,12 @@
 namespace:
-  name: test
+  name: production
  
 image:
   repository: 202011501/ml-flask-frontend
   tag: latest
 
 replicaCount: 3
+
+service: 
+  port: 5000
+  type: LoadBalancer
